--- a/src/config/tsconfig.json
+++ b/src/config/tsconfig.json
@@ -1,14 +1,14 @@
 {
-  "include": ["../../src/"],
-  "exclude": ["../../**/node_modules/", "../../**/dist/", "../../**/.jest/", "../../**/.cache/"],
+  "include": ["src", "src/**/*.json"],
+  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
+    "baseUrl": "./",
     "target": "es2018",
     "module": "commonjs",
     "lib": ["es2018"],
     "types": ["node", "jest"],
-    "baseUrl": "../../",
-    "rootDir": "../../src/",
-    "outDir": "../../dist/",
     "jsx": "react",
     "allowJs": true,
     "resolveJsonModule": true,
