--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # DO NOT CHANGE THE STRUCTURE OF THIS FILE
-# You may add or remove patterns and comments but do not change the "=== HEADING ===" comments
+# You may add or remove patterns but do not change the "=== HEADING ===" comments
 
 # === Build Files ===
 # Files which are the result of transforming other files in the project
+# First item should be the path to the Typescript build output directory without any glob patterns
 dist
 
 # === Cache Files ===
@@ -37,6 +38,7 @@ jest.config.js
 tsconfig.json
 tsconfig.eslint.json
 .nvmrc
+.vscode
 !.gitignore
 
 # === Other Files ===
