--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   ],
   "author": "Jack Field <jack@jf.id.au>",
   "license": "MIT",
+  "project": {
+    "src": [
+      "./src/"
+    ]
+  },
+  "bin": {
+    "project": "./dist/bin/project.js"
+  },
   "scripts": {
     "=== Generated Scripts (do not modify) ===": "",
     "build": "tsc",
@@ -24,7 +32,7 @@
     "example": "cd ./__example__ && ts-node -P ../tsconfig.json ../src/bin/project.ts",
     "postinstall": "node ./dist/bin/project.js",
     "setup": "node ./scripts/setup.js",
-    "regenerate-config": "yarn build && yarn postinstall"
+    "regenerate-config": "yarn build && yarn postinstall --recreate-gitignore"
   },
   "dependencies": {
     "@jest/types": "^26.0.1",
