--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/eslint": "^6.8.1",
     "@types/fs-extra": "^9.0.1",
     "@types/prettier": "^2.0.1",
+    "chalk": "^4.0.0",
     "ts-node": "^8.10.2",
     "type-fest": "^0.15.0"
   },
