--- a/templates/.github/workflows/release.yml
+++ b/templates/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 14.x
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
 
       - name: Create release pull request which will publish to npm
         id: changesets
