--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "postinstall": "node ./src/scripts/postinstall.js",
     "regenerate-config": "yarn build:clean && yarn build && yarn postinstall"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "echo \"Enter changeset information or press escape to skip...\" && yarn changeset"
+    }
+  },
   "dependencies": {
     "@changesets/cli": "^2.8.0",
     "@jest/types": "^26.0.1",
@@ -51,6 +56,7 @@
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "fs-extra": "^9.0.1",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
