--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "echo \"Enter changeset information or press escape to skip...\" && yarn changeset < /dev/tty"
+      "pre-push": "echo \"Enter changeset information or press escape to skip...\" && yarn changeset --commit < /dev/tty"
     }
   },
   "dependencies": {
