--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "@jakzo/project",
-  "version": "0.0.3",
-  "description": "Javascript project tooling in a box.",
+  "name": "@jstm/monorepo",
+  "private": true,
+  "version": "0.0.1",
+  "description": "JavaScript Technology Manager -- automated project setup.",
   "main": "./dist/index.js",
   "keywords": [
     "project",
+    "tech stack",
     "tooling",
+    "configuration",
+    "automation",
     "boilerplate"
   ],
   "author": "Jack Field <jack@jf.id.au>",
   "license": "MIT",
-  "project": {
-    "src": [
-      "./src/"
-    ]
-  },
-  "bin": {
-    "project": "./dist/bin/project.js"
-  },
   "scripts": {
     "=== Generated Scripts (do not modify) ===": "",
     "build": "tsc -p ./tsconfig.build.json",
@@ -33,45 +29,18 @@
     "=== (end generated scripts) ===": "",
     "": "",
     "dev": "yarn test:watch",
-    "postinstall": "node ./src/scripts/postinstall.js",
+    "prepublish": "",
+    "// postinstall": "node ./scripts-dist/postinstall.js",
     "regenerate-config": "yarn build:clean && yarn build && yarn postinstall"
   },
   "husky": {
     "hooks": {
-      "pre-push": "echo \"Enter changeset information or press escape to skip...\" && yarn changeset < /dev/tty && git add .changeset/ && git commit -m \"add changeset\""
+      "pre-push": "# ts-node ./src/bin/pre-push.ts"
     }
   },
-  "dependencies": {
-    "@changesets/cli": "^2.8.0",
-    "@jest/types": "^26.0.1",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.11",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/experimental-utils": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.13.2",
-    "eslint-plugin-only-warn": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "fs-extra": "^9.0.1",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.1.0",
-    "ttypescript": "^1.5.10",
-    "typescript": "^3.9.5"
-  },
-  "devDependencies": {
-    "@types/eslint": "^6.8.1",
-    "@types/fs-extra": "^9.0.1",
-    "@types/prettier": "^2.0.1",
-    "chalk": "^4.0.0",
-    "ts-node": "^8.10.2",
-    "type-fest": "^0.15.0"
-  },
+  "workspaces": [
+    "./packages/*/*"
+  ],
   "repository": "git@github.com:jakzo/project.git",
   "homepage": "https://github.com/jakzo/project"
 }
