--- a/package.json
+++ b/package.json
@@ -1,25 +1,75 @@
 {
   "name": "@jstm/core",
   "version": "0.2.0",
-  "main": "index.js",
+  "description": "JavaScript Technology Manager -- project tooling in a box.",
+  "keywords": [
+    "tooling",
+    "tech",
+    "management",
+    "automation",
+    "boilerplate",
+    "generator"
+  ],
+  "homepage": "https://github.com/jakzo/jstm#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jakzo/jstm.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jakzo/jstm/issues",
+    "email": "jack@jf.id.au"
+  },
+  "author": "Jack Field",
   "license": "MIT",
+  "main": "index.js",
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=10"
+  },
+  "bin": {
+    "run-if-script-exists": "./dist/bin/run-if-script-exists.js"
+  },
   "scripts": {
-    "// postinstall": "project",
-    "generate-packages": "node ./scripts/generate-packages.js"
+    "=== Generated Scripts (do not modify) ===": "",
+    "dev": "project && ts-node-dev ./src/index.ts",
+    "lint:eslint": "project && eslint --cache --ext js,jsx,ts,tsx ./",
+    "lint:prettier": "project && prettier -c \"./**/*{.json,.md}\"",
+    "lint:fix": "project && eslint --cache --ext js,jsx,ts,tsx ./ --fix && prettier -c \"./**/*{.json,.md}\" --write && run-if-script-exists lint:fix:custom",
+    "lint": "project && eslint --cache --ext js,jsx,ts,tsx ./ && prettier -c \"./**/*{.json,.md}\" && run-if-script-exists lint:custom",
+    "build:clean": "project && rimraf \"./dist\" *.tsbuildinfo && run-if-script-exists build:clean:custom",
+    "build:typescript": "project && tsc -p ./tsconfig.build.json",
+    "build:watch": "project && tsc -p ./tsconfig.build.json -w",
+    "build": "project && run-if-script-exists build:custom-before && tsc -p ./tsconfig.build.json && run-if-script-exists build:custom",
+    "test:jest": "project && jest --passWithNoTests",
+    "test:watch": "project && jest --passWithNoTests --watch",
+    "test": "project && jest --passWithNoTests && run-if-script-exists test:custom",
+    "test:typecheck": "project && tsc -p ./tsconfig.json --noEmit && tsc -p ./tsconfig.build.json --noEmit",
+    "test:all": "project && tsc -p ./tsconfig.json --noEmit && tsc -p ./tsconfig.build.json --noEmit && eslint --cache --ext js,jsx,ts,tsx ./ && prettier -c \"./**/*{.json,.md}\" && run-if-script-exists lint:custom && jest --passWithNoTests && run-if-script-exists test:custom",
+    "release": "project && rimraf \"./dist\" *.tsbuildinfo && run-if-script-exists build:clean:custom && run-if-script-exists build:custom-before && tsc -p ./tsconfig.build.json && run-if-script-exists build:custom && run-if-script-exists release:custom && changeset publish",
+    "=== (end generated scripts) ===": "",
+    "": "",
+    "build:clean:custom": "rimraf ./presets/packages",
+    "build:custom": "ts-node -r tsconfig-paths/register ./scripts/generate-preset-packages.ts && tsc -p ./presets/tsconfig.presets.json",
+    "release:custom": "ts-node ./scripts/publish-preset-packages.ts"
   },
   "dependencies": {
     "fs-extra": "^9.1.0",
-    "golden-fleece": "^1.0.9"
+    "golden-fleece": "^1.0.9",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.14.1",
     "@changesets/get-release-plan": "^2.0.1",
     "@changesets/release-utils": "^0.1.0",
+    "@jstm/commands-stub": "file:./commands-stub",
+    "@types/fs-extra": "^9.0.9",
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "chalk": "^4.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-only-warn": "^1.0.2",
@@ -32,6 +82,8 @@
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
+    "type-fest": "^1.0.1",
     "typescript": "^4.2.3"
   }
 }
