--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,7 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
       - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
-          yarn project
+        run: yarn install --frozen-lockfile
       - name: Test
         run: |
           yarn run-if-script-exists test:ci:before
@@ -53,9 +51,7 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
       - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
-          yarn project
+        run: yarn install --frozen-lockfile
       - name: Bump versions according to changeset
         run: |
           git config --global user.name "github-actions[bot]"
