--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    outputs:
+      release_required: ${{ steps.check.outputs.release_required }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -28,15 +30,19 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Test
         run: |
+          set -e
           yarn run-if-script-exists test:ci:before
           yarn test:all
           yarn run-if-script-exists test:ci:after
+      - name: Check if release is required
+        id: check
+        run: yarn changeset status --since main && echo "::set-output name=release_required::true"
 
   release:
     name: Release
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' && needs.test.outputs.release_required == 'true' }}
     environment: Release
     outputs:
       release_upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -54,6 +60,7 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Bump versions according to changeset
         run: |
+          set -e
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           yarn changeset version
@@ -61,6 +68,7 @@ jobs:
       - name: Publish to npm
         id: publish
         run: |
+          set -e
           echo '//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}' > .npmrc
           yarn run-if-script-exists release:ci:before
           yarn release
