--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          # Fetch Git history so that Changesets can check if release is required
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
