--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     outputs:
-      release_required: ${{ steps.check.outputs.release_required }}
+      release_required: ${{ steps.release_required.outputs.result }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -38,14 +38,18 @@ jobs:
           yarn test:all
           yarn run-if-script-exists test:ci:after
       - name: Check if release is required
-        id: check
-        run: yarn changeset status --since main && echo "::set-output name=release_required::true"
+        uses: actions/github-script@v3
+        id: release_required
+        with:
+          script: |
+            const { changesets } = await require("@changesets/release-utils").readChangesetState();
+            return changesets.length > 0;
 
   release:
     name: Release
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ github.ref == 'refs/heads/main' && needs.test.outputs.release_required == 'true' }}
+    if: ${{ github.ref == 'refs/heads/main' && needs.test.outputs.release_required }}
     environment: Release
     outputs:
       release_upload_url: ${{ steps.create_release.outputs.upload_url }}
