--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ github.ref == 'refs/heads/main' && needs.test.outputs.release_required }}
+    if: ${{ github.ref == 'refs/heads/main' && needs.test.outputs.release_required == 'true' }}
     environment: Release
     outputs:
       release_upload_url: ${{ steps.create_release.outputs.upload_url }}
