--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,10 @@ jobs:
         uses: actions/github-script@v3
         id: release_required
         with:
-          result-encoding: string
           script: |
             const releaseUtils = require(process.env.GITHUB_WORKSPACE + '/node_modules/@changesets/release-utils');
             const { changesets } = await releaseUtils.readChangesetState();
-            return String(changesets.length > 0);
+            return changesets.length > 0;
 
   release:
     name: Release
