--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "fs-extra": "^9.1.0",
     "golden-fleece": "^1.0.9",
+    "inquirer": "^8.0.0",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@changesets/release-utils": "^0.1.0",
     "@jstm/commands-stub": "file:./commands-stub",
     "@types/fs-extra": "^9.0.9",
+    "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
