--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/fs-extra": "^9.0.9",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "chalk": "^4.1.0",
