add config system

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "url": "https://github.com/jakzo/jstm.git"
   },
   "bugs": {
-    "url": "https://github.com/jakzo/jstm/issues",
-    "email": "jack@jf.id.au"
+    "url": "https://github.com/jakzo/jstm/issues"
   },
   "author": "Jack Field",
   "license": "MIT",
