fix changelog entries in GitHub releases

--- a/commands-stub/package.json
+++ b/commands-stub/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "project": "bin.js",
     "run-if-script-exists": "bin.js",
-    "project-pre-push": "bin.js"
+    "project-pre-push": "bin.js",
+    "ci-github-print-changelog": "bin.js"
   },
   "scripts": {
     "postinstall": "node bin.js"
