--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "author": "Jack Field",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
     "node": ">=10"
