--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "bufferutil": "^4.0.3",
+    "canvas": "^2.7.0",
     "chalk": "^4.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
@@ -82,6 +84,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "node-notifier": "^9.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
@@ -89,6 +92,7 @@
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "type-fest": "^1.0.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "utf-8-validate": "^5.0.4"
   }
 }
