--- a/repo-helpers-stub/package.json
+++ b/repo-helpers-stub/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@jstm/commands-stub",
+  "name": "@jstm/core",
   "private": true,
   "version": "1.0.0",
   "license": "MIT",
+  "main": "index.js",
   "bin": {
     "project": "bin.js",
     "run-if-script-exists": "bin.js",
