--- a/package.json
+++ b/package.json
@@ -61,38 +61,38 @@
     "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.14.1",
-    "@changesets/get-release-plan": "^2.0.1",
-    "@changesets/release-utils": "^0.1.0",
+    "@changesets/cli": "2.14.1",
+    "@changesets/get-release-plan": "2.0.1",
+    "@changesets/release-utils": "0.1.0",
     "@jstm/core": "file:./repo-helpers-stub",
-    "@types/fs-extra": "^9.0.9",
-    "@types/inquirer": "^7.3.1",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "bufferutil": "^4.0.3",
-    "canvas": "^2.7.0",
-    "chalk": "^4.1.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-only-warn": "^1.0.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "node-notifier": "^9.0.1",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
-    "tsconfig-paths": "^3.9.0",
-    "type-fest": "^1.0.1",
-    "typescript": "^4.2.3",
-    "utf-8-validate": "^5.0.4"
+    "@types/fs-extra": "9.0.9",
+    "@types/inquirer": "7.3.1",
+    "@types/jest": "26.0.21",
+    "@types/node": "14.14.37",
+    "@typescript-eslint/eslint-plugin": "4.18.0",
+    "@typescript-eslint/parser": "4.18.0",
+    "bufferutil": "4.0.3",
+    "canvas": "2.7.0",
+    "chalk": "4.1.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.3.2",
+    "eslint-plugin-only-warn": "1.0.2",
+    "eslint-plugin-prettier": "3.3.1",
+    "husky": "6.0.0",
+    "jest": "26.6.3",
+    "lint-staged": "10.5.4",
+    "node-notifier": "9.0.1",
+    "prettier": "2.2.1",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.5.4",
+    "ts-node": "9.1.1",
+    "ts-node-dev": "1.1.6",
+    "tsconfig-paths": "3.9.0",
+    "type-fest": "1.0.1",
+    "typescript": "4.2.3",
+    "utf-8-validate": "5.0.4"
   }
 }
