--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/inquirer": "7.3.1",
     "@types/jest": "26.0.21",
     "@types/node": "14.14.37",
+    "@types/npm": "2.0.31",
     "@typescript-eslint/eslint-plugin": "4.18.0",
     "@typescript-eslint/parser": "4.18.0",
     "bufferutil": "4.0.3",
@@ -89,6 +90,7 @@
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "node-notifier": "9.0.1",
+    "npm": "7.10.0",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
