--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "engines": {
-    "node": ">=10"
-  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "engines": {
+    "node": ">=10"
   },
   "bin": {
     "ci-github-print-changelog": "./dist/bin/ci-github-print-changelog.js",
@@ -68,7 +68,9 @@
     "@changesets/cli": "2.14.1",
     "@changesets/get-release-plan": "2.0.1",
     "@changesets/release-utils": "0.1.0",
-    "@jstm/core": "file:./repo-helpers-stub",
+    "@jstm/core": "file:./stub-packages/core",
+    "@jstm/preset-node": "file:./stub-packages/preset",
+    "@manypkg/get-packages": "^1.1.1",
     "@types/fs-extra": "9.0.9",
     "@types/inquirer": "7.3.1",
     "@types/jest": "26.0.21",
@@ -87,11 +89,13 @@
     "eslint-plugin-only-warn": "1.0.2",
     "eslint-plugin-prettier": "3.3.1",
     "husky": "6.0.0",
+    "isutf8": "3.1.1",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "node-notifier": "9.0.1",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
+    "tempy": "^1.0.1",
     "ts-jest": "26.5.4",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.6",
