--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable --immutable-cache --check-cache
       - name: Test
         run: |
           set -e
@@ -66,7 +66,7 @@ jobs:
         with:
           node-version: ${{ env.node_version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable --immutable-cache --check-cache
       - name: Bump versions according to changeset
         run: |
           set -e
