fix npm publish

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint:prettier": "project && prettier -c \"./**/*{.json,.md}\"",
     "lint:fix": "project && eslint --cache --ext js,jsx,ts,tsx ./ --fix && prettier -c \"./**/*{.json,.md}\" --write && run-if-script-exists lint:fix:custom",
     "lint": "project && eslint --cache --ext js,jsx,ts,tsx ./ && prettier -c \"./**/*{.json,.md}\" && run-if-script-exists lint:custom",
-    "build:clean": "project && rimraf \"./dist\" *.tsbuildinfo && run-if-script-exists build:clean:custom",
+    "build:clean": "project && rimraf \"./dist\" \"*.tsbuildinfo\" && run-if-script-exists build:clean:custom",
     "build:typescript": "project && tsc -p ./tsconfig.build.json",
     "build:watch": "project && tsc -p ./tsconfig.build.json -w",
     "build": "project && run-if-script-exists build:custom-before && tsc -p ./tsconfig.build.json && run-if-script-exists build:custom",
@@ -49,7 +49,7 @@
     "test": "project && jest --passWithNoTests && run-if-script-exists test:custom",
     "test:typecheck": "project && tsc -p ./tsconfig.json --noEmit && tsc -p ./tsconfig.build.json --noEmit",
     "test:all": "project && tsc -p ./tsconfig.json --noEmit && tsc -p ./tsconfig.build.json --noEmit && eslint --cache --ext js,jsx,ts,tsx ./ && prettier -c \"./**/*{.json,.md}\" && run-if-script-exists lint:custom && jest --passWithNoTests && run-if-script-exists test:custom",
-    "release": "project && rimraf \"./dist\" *.tsbuildinfo && run-if-script-exists build:clean:custom && run-if-script-exists build:custom-before && tsc -p ./tsconfig.build.json && run-if-script-exists build:custom && changeset publish && run-if-script-exists release:custom",
+    "release": "project && rimraf \"./dist\" \"*.tsbuildinfo\" && run-if-script-exists build:clean:custom && run-if-script-exists build:custom-before && tsc -p ./tsconfig.build.json && run-if-script-exists build:custom && changeset publish && run-if-script-exists release:custom",
     "prepare": "project && husky install && run-if-script-exists prepare:custom",
     "=== (end generated scripts) ===": "",
     "": "",
