--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
           yarn run-if-script-exists release:ci:before
           yarn release
           echo "::set-output name=version_tag::$(git describe --tags --abbrev=0)"
-          echo "::set-output name=release_changelog::$(yarn --silent ci-github-print-changelog)"
+          echo "::set-output name=release_changelog::$(yarn ci-github-print-changelog)"
           yarn run-if-script-exists release:ci:after
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
