--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "detect-port": "^1.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-node": "0.3.4",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.3.2",
