--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,15 @@
-npmRegistryServer: https://registry.npmjs.org
+changesetBaseRefs:
+  - main
+  - origin/main
+  - upstream/main
+
+npmRegistryServer: "https://registry.npmjs.org"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
 
 pnpIgnorePatterns:
   - ./presets/__tests__/generated/**
