--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,9 @@ changesetBaseRefs:
   - origin/main
   - upstream/main
 
+changesetIgnorePatterns:
+  - "**/__*__/**/*"
+
 npmRegistryServer: "https://registry.npmjs.org"
 
 plugins:
@@ -10,6 +13,8 @@ plugins:
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
 
 pnpIgnorePatterns:
   - ./presets/__tests__/generated/**
