--- a/stub-packages/core/package.json
+++ b/stub-packages/core/package.json
@@ -9,9 +9,9 @@
     "project-pre-push": "project-pre-push.js",
     "ci-github-print-changelog": "ci-github-print-changelog.js"
   },
-  "dependencies": {
-    "fs-extra": "^9.1.0",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.3"
+  "peerDependencies": {
+    "fs-extra": "*",
+    "ts-node": "*",
+    "typescript": "*"
   }
 }
