--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           script: |
             const path = require('path');
-            const pnpapi = require(path.join(process.env.GITHUB_WORKSPACE, '.pnp'));
+            const pnpapi = require(path.join(process.env.GITHUB_WORKSPACE, '.pnp.cjs'));
             pnpapi.setup();
             const releaseUtilsPath = pnpapi.resolveToUnqualified(
               '@changesets/release-utils',
